--- a/package.json
+++ b/package.json
@@ -11,13 +11,18 @@
   "dependencies": {
     "dateformat": "^4.5.1",
     "ejs": "^3.1.6",
-    "express": "^4.17.1",
+    "express": "^4.18.2",
+    "forever": "^4.0.3",
+    "fs": "^0.0.1-security",
     "gs": "0.0.2",
     "mysql": "^2.18.1",
     "node-excel-export": "^1.4.4",
+    "puppeteer": "^18.2.1",
+    "qrcode": "^1.5.1",
     "qrcode-terminal": "^0.12.0",
     "readline": "^1.3.0",
     "request": "^2.88.2",
+    "socket.io": "^4.5.2",
     "whatsapp-web.js": "^1.17.1",
     "xlsx": "^0.17.0"
   },
